@@ -2,6 +2,12 @@ This documents significant changes in the dev branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-11-17:
+
+- Fixed undefined behaviour when passing the floating point values Inf or
+  NaN to the 'sleep' built-in command. These now cause 'sleep' to correctly
+  sleep forever or print an error message, respectively.
+
 2024-11-15:
 
 - On Android 14 (Termux), the -a option to the 'exec' command is ineffective
